syntax = "proto3";

package Shop.Application.DTOs.IUserRole;

message IUserRole {
    int32 numberuser_id = 1;
    string user_id = 2;
    string role_id = 3;
    string? role_name = 4;
    string? user_name = 5;
    string? persian_role_name = 6;
}
